# mp-search

./: .env.example  .gitignore  README.md  README_zh.md  article.md  pyproject.toml
.github/workflows/: publish.yml
mp_search/: __main__.py  config.py  i18n.py
mp_search/api/: __init__.py  client.py
mp_search/export/: __init__.py  writer.py
mp_search/tui/: app.py  detail.py  setup.py
