[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mp-search"
version = "0.1.3"
description = "Terminal UI tool for searching materials from the Materials Project database"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "sylearn"},
]
keywords = ["materials-project", "materials-science", "tui", "textual", "pymatgen"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "requests",
    "textual>=0.70.0",
    "pymatgen",
    "python-dotenv",
]

[project.urls]
Homepage = "https://github.com/sylearn/mp-search"
Repository = "https://github.com/sylearn/mp-search"
Issues = "https://github.com/sylearn/mp-search/issues"

[project.scripts]
mp-search = "mp_search.__main__:main"

[tool.setuptools.packages.find]
include = ["mp_search*"]
